# MDF-Viewer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: test.mvc
docs/: api.md  architecture.md  release.md  ui.md
docs/agents/: domain.md  issue-tracker.md
docs/requirements/: file-handling.md  mdf-support.md  non-functional.md  plotting.md  plugin-api.md  signal-browser.md  virtual-measurements.md
installer/: mdf_viewer.iss  mdf_viewer.spec  rthook_certifi_win32.py
plugins/signal_statistics/: __init__.py
plugins/tab_type_fixture/: __init__.py
src/mdf_viewer/: __init__.py  __main__.py  app.py  config_manager.py  enums.py  errors.py  settings.py  update_checker.py
src/mdf_viewer/controller/: __init__.py  app_controller.py  cursor_controller.py  events.py  interfaces.py  zoom_controller.py
tests/: conftest.py  test_app.py  test_config_manager.py  test_license.py  test_settings.py  test_update_checker.py
tests/controller/: test_app_controller.py  test_cursor_controller.py  test_zoom_controller.py
tests/fixtures/: .gitkeep
tests/model/: test_interpolate.py  test_loaded_measurement.py  test_mdf_loader.py  test_measurement_loader.py  test_signal_data.py  test_signal_metadata.py  test_virtual_measurement_loader.py  test_virtual_signal.py
tests/plugin_api/: test_context_e2e.py  test_context_read.py  test_context_registration.py  test_loader.py  test_plugin.py  test_plugin_lifecycle.py  test_registry.py  test_signal_statistics_plugin.py  test_tab_type_fixture_plugin.py  test_types.py
tests/view/: test_active_signals_table.py  test_cursor_stripes_view.py  test_cursor_view.py  test_info_boxes.py  test_main_window.py  test_measurement_mapping_dialog.py  test_mime.py  test_plot_area.py  test_plot_stripe.py  test_plot_stripes_area.py  test_preferences_dialog.py  test_signal_browser.py  test_signal_restore_dialogs.py  test_widgets.py
tests/view_model/: test_active_signal.py
tools/: profile_plot.py
(+49 files in other folders)
