[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdf-viewer"
dynamic = ["version"]
description = "Desktop viewer for ASAM MDF (MDF3/MDF4) measurement data files."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [{ name = "Andreas Maus", email = "andreas.maus.74@gmail.com" }]
dependencies = [
    "PyQt6>=6.6",
    "pyqtgraph>=0.13",
    "asammdf>=7.4",
    "numpy>=1.24",
    "cryptography>=41",
    "python-certifi-win32>=1.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.6",
    "pyinstaller>=6.0",
]

[project.gui-scripts]
mdf-viewer = "mdf_viewer.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "mdf_viewer.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requirement(id): links a test to a docs/requirements/ REQ-ID",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
